--- a/pages/read.html
+++ b/pages/read.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/base.css" />
     <link rel="stylesheet" type="text/css" href="../styles/layout.css" />
     <link rel="stylesheet" type="text/css" href="../styles/shared.css" />
-    <link rel="stylesheet" type="text/css" href="../styles/health.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/read.css" />
     <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-firestore.js"></script>
@@ -15,7 +15,7 @@
     <script src="../scripts/env.js"></script>
     <script src="../scripts/enums.js"></script>
     <script src="../scripts/shared.js"></script>
-    <script src="../scripts/health.js"></script>
+    <script src="../scripts/read.js"></script>
 </head>
 
 <body onload="onLoad()">
@@ -25,39 +25,44 @@
                 <div class="header-title-container">
                     <h1>Site de Notícias</h1>
                 </div>
-                <div class="header-search-input-container">
-                    <div class="header-search-input-icon-container">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF">
-                <path d="M0 0h24v24H0V0z" fill="none" />
-                <path
-                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
-                />
-              </svg>
-                    </div>
-                    <input id="search-input" oninput="searchNews()" />
-                </div>
             </div>
             <nav class="header-navigation">
                 <ul class="header-navigation-ul">
                     <li>
                         <a href="../index.html">Principal</a>
                     </li>
-                    <li><a href="./politic.html">Política</a></li>
+                    <li>
+                        <a href="./politic.html">Política</a
+                    ></li>
                     <li>
                         <a href="./education.html">Educação</a>
                     </li>
-                    <li class="current"><a>Saúde</a></li>
+                    <li><a href="./health.html">Saúde</a></li>
                     <!-- <li><a href="./contact.html">Contato</a></li> -->
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <div class="external-container">
-            <div id="news-block-1" class="news-block">
-            </div>
-
-            <div id="news-block-2" class="news-block">
+        <div id="external-container" class="external-container">
+            <div class="news-container">
+                <img src="https://global-uploads.webflow.com/5ef5480befd392489dacf544/5f9f5e5943de7e69a1339242_5f44a7398c0cdf460857e744_img-image.jpeg" />
+                <div class="news-data-container">
+                    <div class="news-general-informations-container">
+                        <div class="title-container">
+                            <h1>teste</h1>
+                        </div>
+                        <div class="author-container">
+                            <p>teste</p>
+                        </div>
+                        <div class="category-container">
+                            <p>teste</p>
+                        </div>
+                    </div>
+                    <div class="text-container">
+                        <p>aaaaaaaaaaaaaa</p>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
