adjusts/contact area

--- a/pages/read.html
+++ b/pages/read.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>Site de Notícias</title>
     <link rel="stylesheet" type="text/css" href="../styles/base.css" />
@@ -16,64 +15,43 @@
     <script src="../scripts/enums.js"></script>
     <script src="../scripts/shared.js"></script>
     <script src="../scripts/read.js"></script>
-</head>
+  </head>
 
-<body onload="onLoad()">
+  <body onload="onLoad()">
     <header class="header-external-container">
-        <div class="header-internal-container">
-            <div class="header-title-and-search-container">
-                <div class="header-title-container">
-                    <h1>Site de Notícias</h1>
-                </div>
-            </div>
-            <nav class="header-navigation">
-                <ul class="header-navigation-ul">
-                    <li>
-                        <a href="../index.html">Principal</a>
-                    </li>
-                    <li>
-                        <a href="./politic.html">Política</a
-                    ></li>
-                    <li>
-                        <a href="./education.html">Educação</a>
-                    </li>
-                    <li><a href="./health.html">Saúde</a></li>
-                    <!-- <li><a href="./contact.html">Contato</a></li> -->
-                </ul>
-            </nav>
+      <div class="header-internal-container">
+        <div class="header-title-and-search-container">
+          <div class="header-title-container">
+            <h1>Site de Notícias</h1>
+          </div>
         </div>
+        <nav class="header-navigation">
+          <ul class="header-navigation-ul">
+            <li>
+              <a href="../index.html">Principal</a>
+            </li>
+            <li>
+              <a href="./politic.html">Política</a>
+            </li>
+            <li>
+              <a href="./education.html">Educação</a>
+            </li>
+            <li><a href="./health.html">Saúde</a></li>
+            <li><a href="./contact.html">Contato</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
-        <div id="external-container" class="external-container">
-            <div class="news-container">
-                <img src="https://global-uploads.webflow.com/5ef5480befd392489dacf544/5f9f5e5943de7e69a1339242_5f44a7398c0cdf460857e744_img-image.jpeg" />
-                <div class="news-data-container">
-                    <div class="news-general-informations-container">
-                        <div class="title-container">
-                            <h1>teste</h1>
-                        </div>
-                        <div class="author-container">
-                            <p>teste</p>
-                        </div>
-                        <div class="category-container">
-                            <p>teste</p>
-                        </div>
-                    </div>
-                    <div class="text-container">
-                        <p>aaaaaaaaaaaaaa</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+      <div id="external-container" class="external-container">
+        <div class="news-container"></div>
+      </div>
     </main>
     <footer class="footer-external-container">
-        <div class="footer-internal-container">
-            <div class="powered-by-container">
-                <span>Desenvolvido por: </span> Edmilson Nelson da Silva Junior e Israel Fernandes Pereira
-            </div>
-            <div class="licenisng-container">Licenciamento</div>
-        </div>
+      <div class="footer-internal-container">
+        <div class="powered-by-container"><span>Desenvolvido por: </span> Edmilson Nelson da Silva Junior e Israel Fernandes Pereira</div>
+        <div class="licenisng-container">Copyright © 2021. All rights reserved.</div>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
