--- a/pages/health.html
+++ b/pages/health.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>Site de Notícias</title>
     <link rel="stylesheet" type="text/css" href="../styles/base.css" />
@@ -16,59 +15,54 @@
     <script src="../scripts/enums.js"></script>
     <script src="../scripts/shared.js"></script>
     <script src="../scripts/health.js"></script>
-</head>
+  </head>
 
-<body onload="onLoad()">
+  <body onload="onLoad()">
     <header class="header-external-container">
-        <div class="header-internal-container">
-            <div class="header-title-and-search-container">
-                <div class="header-title-container">
-                    <h1>Site de Notícias</h1>
-                </div>
-                <div class="header-search-input-container">
-                    <div class="header-search-input-icon-container">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF">
+      <div class="header-internal-container">
+        <div class="header-title-and-search-container">
+          <div class="header-title-container">
+            <h1>Site de Notícias</h1>
+          </div>
+          <div class="header-search-input-container">
+            <div class="header-search-input-icon-container">
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF">
                 <path d="M0 0h24v24H0V0z" fill="none" />
                 <path
                   d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                 />
               </svg>
-                    </div>
-                    <input id="search-input" oninput="searchNews()" />
-                </div>
             </div>
-            <nav class="header-navigation">
-                <ul class="header-navigation-ul">
-                    <li>
-                        <a href="../index.html">Principal</a>
-                    </li>
-                    <li><a href="./politic.html">Política</a></li>
-                    <li>
-                        <a href="./education.html">Educação</a>
-                    </li>
-                    <li class="current"><a>Saúde</a></li>
-                    <!-- <li><a href="./contact.html">Contato</a></li> -->
-                </ul>
-            </nav>
+            <input id="search-input" oninput="searchNews()" />
+          </div>
         </div>
+        <nav class="header-navigation">
+          <ul class="header-navigation-ul">
+            <li>
+              <a href="../index.html">Principal</a>
+            </li>
+            <li><a href="./politic.html">Política</a></li>
+            <li>
+              <a href="./education.html">Educação</a>
+            </li>
+            <li class="current"><a>Saúde</a></li>
+            <li><a href="./contact.html">Contato</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
-        <div class="external-container">
-            <div id="news-block-1" class="news-block">
-            </div>
+      <div class="external-container">
+        <div id="news-block-1" class="news-block"></div>
 
-            <div id="news-block-2" class="news-block">
-            </div>
-        </div>
+        <div id="news-block-2" class="news-block"></div>
+      </div>
     </main>
     <footer class="footer-external-container">
-        <div class="footer-internal-container">
-            <div class="powered-by-container">
-                <span>Desenvolvido por: </span> Edmilson Nelson da Silva Junior e Israel Fernandes Pereira
-            </div>
-            <div class="licenisng-container">Licenciamento</div>
-        </div>
+      <div class="footer-internal-container">
+        <div class="powered-by-container"><span>Desenvolvido por: </span> Edmilson Nelson da Silva Junior e Israel Fernandes Pereira</div>
+        <div class="licenisng-container">Copyright © 2021. All rights reserved.</div>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
