header options to icons/authentication initialization

--- a/pages/read.html
+++ b/pages/read.html
@@ -26,18 +26,22 @@
           </div>
         </div>
         <nav class="header-navigation">
-          <ul class="header-navigation-ul">
+          <ul class="header-navigation-ul" id="header-navigation-ul">
             <li>
-              <a href="../index.html">Principal</a>
+              <a title="Principal" href="../index.html"><img src="../assets/icons/home.svg" /></a>
             </li>
             <li>
-              <a href="./politic.html">Política</a>
+              <a title="Política" href="./politic.html"><img src="../assets/icons/politics.svg" /></a>
             </li>
             <li>
-              <a href="./education.html">Educação</a>
+              <a title="Educação" href="./education.html"><img src="../assets/icons/education.svg" /></a>
             </li>
-            <li><a href="./health.html">Saúde</a></li>
-            <li><a href="./contact.html">Contato</a></li>
+            <li>
+              <a title="Saúde" href="./health.html"><img src="../assets/icons/health.svg" /></a>
+            </li>
+            <li>
+              <a title="Contato" href="./contact.html"><img src="../assets/icons/contact.svg" /></a>
+            </li>
           </ul>
         </nav>
       </div>
