--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-firestore.js"></script>
     <script src="./scripts/toast.min.js"></script>
     <script src="./scripts/env.js"></script>
+    <script src="./scripts/user.js"></script>
     <script src="./scripts/enums.js"></script>
     <script src="./scripts/shared.js"></script>
     <script src="./scripts/index.js"></script>
@@ -37,16 +38,22 @@
           </div>
         </div>
         <nav class="header-navigation">
-          <ul class="header-navigation-ul">
+          <ul class="header-navigation-ul" id="header-navigation-ul">
             <li class="current">
-              <a>Principal</a>
+              <a title="Principal"><img src="./assets/icons/home.svg" /></a>
             </li>
-            <li><a href="pages/politic.html">Política</a></li>
             <li>
-              <a href="pages/education.html">Educação</a>
+              <a title="Política" href="pages/politic.html"><img src="./assets/icons/politics.svg" /></a>
             </li>
-            <li><a href="pages/health.html">Saúde</a></li>
-            <li><a href="pages/contact.html">Contato</a></li>
+            <li>
+              <a title="Educação" href="pages/education.html"><img src="./assets/icons/education.svg" /></a>
+            </li>
+            <li>
+              <a title="Saúde" href="pages/health.html"><img src="./assets/icons/health.svg" /></a>
+            </li>
+            <li>
+              <a title="Contato" href="pages/contact.html"><img src="./assets/icons/contact.svg" /></a>
+            </li>
           </ul>
         </nav>
       </div>
