--- a/pages/read.html
+++ b/pages/read.html
@@ -12,7 +12,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-firestore.js"></script>
     <script src="../scripts/toast.min.js"></script>
     <script src="../scripts/env.js"></script>
+    <script src="../scripts/user.js"></script>
     <script src="../scripts/enums.js"></script>
+    <script src="../scripts/components.js"></script>
     <script src="../scripts/shared.js"></script>
     <script src="../scripts/read.js"></script>
   </head>
