--- a/index.html
+++ b/index.html
@@ -3,73 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Site de Notícias</title>
-    <link rel="stylesheet" type="text/css" href="./styles/base.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/layout.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/shared.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/index.css" />
-    <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-firestore.js"></script>
-    <script src="./scripts/toast.min.js"></script>
-    <script src="./scripts/env.js"></script>
-    <script src="./scripts/user.js"></script>
-    <script src="./scripts/enums.js"></script>
-    <script src="./scripts/shared.js"></script>
-    <script src="./scripts/index.js"></script>
+    <script>
+      window.location.href = 'pages/home.html'
+    </script>
   </head>
 
-  <body onload="onLoad()">
-    <header class="header-external-container">
-      <div class="header-internal-container">
-        <div class="header-title-and-search-container">
-          <div class="header-title-container">
-            <h1>Site de Notícias</h1>
-          </div>
-          <div class="header-search-input-container">
-            <div class="header-search-input-icon-container">
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF">
-                <path d="M0 0h24v24H0V0z" fill="none" />
-                <path
-                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
-                />
-              </svg>
-            </div>
-            <input id="search-input" oninput="searchNews()" />
-          </div>
-        </div>
-        <nav class="header-navigation">
-          <ul class="header-navigation-ul" id="header-navigation-ul">
-            <li class="current">
-              <a title="Principal"><img src="./assets/icons/home.svg" /></a>
-            </li>
-            <li>
-              <a title="Política" href="pages/politic.html"><img src="./assets/icons/politics.svg" /></a>
-            </li>
-            <li>
-              <a title="Educação" href="pages/education.html"><img src="./assets/icons/education.svg" /></a>
-            </li>
-            <li>
-              <a title="Saúde" href="pages/health.html"><img src="./assets/icons/health.svg" /></a>
-            </li>
-            <li>
-              <a title="Contato" href="pages/contact.html"><img src="./assets/icons/contact.svg" /></a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <main>
-      <div class="external-container">
-        <div id="news-block-1" class="news-block"></div>
-
-        <div id="news-block-2" class="news-block"></div>
-      </div>
-    </main>
-    <footer class="footer-external-container">
-      <div class="footer-internal-container">
-        <div class="powered-by-container"><span>Desenvolvido por: </span> Edmilson Nelson da Silva Junior e Israel Fernandes Pereira</div>
-        <div class="licenisng-container">Copyright © 2021. All rights reserved.</div>
-      </div>
-    </footer>
-  </body>
+  <body></body>
 </html>
