general: ajustando os alts das imagens e tirando o type dos selects e textareas

--- a/pages/education.html
+++ b/pages/education.html
@@ -28,7 +28,7 @@
           </div>
           <div class="header-search-input-container">
             <div class="header-search-input-icon-container">
-              <img src="../assets/icons/search.svg" />
+              <img src="../assets/icons/search.svg" alt="Pesquisa" />
             </div>
             <input id="search-input" oninput="searchNews()" />
           </div>
@@ -36,19 +36,19 @@
         <nav class="header-navigation">
           <ul class="header-navigation-ul" id="header-navigation-ul">
             <li>
-              <a title="Principal" href="../index.html"><img src="../assets/icons/home.svg" /></a>
+              <a title="Principal" href="../index.html"><img src="../assets/icons/home.svg" alt="Principal" /></a>
             </li>
             <li>
-              <a title="Política" href="./politic.html"><img src="../assets/icons/politics.svg" /></a>
+              <a title="Política" href="./politic.html"><img src="../assets/icons/politics.svg" alt="Política" /></a>
             </li>
             <li class="current">
-              <a title="Educação"><img src="../assets/icons/education.svg" /></a>
+              <a title="Educação"><img src="../assets/icons/education.svg" alt="Educação" /></a>
             </li>
             <li>
-              <a title="Saúde" href="./health.html"><img src="../assets/icons/health.svg" /></a>
+              <a title="Saúde" href="./health.html"><img src="../assets/icons/health.svg" alt="Saúde" /></a>
             </li>
             <li>
-              <a title="Contato" href="./contact.html"><img src="../assets/icons/contact.svg" /></a>
+              <a title="Contato" href="./contact.html"><img src="../assets/icons/contact.svg" alt="Contato" /></a>
             </li>
           </ul>
         </nav>
