--- a/pages/create-news.html
+++ b/pages/create-news.html
@@ -30,19 +30,19 @@
         <nav class="header-navigation">
           <ul class="header-navigation-ul" id="header-navigation-ul">
             <li>
-              <a title="Principal" href="../index.html"><img src="../assets/icons/home.svg" /></a>
+              <a title="Principal" href="../index.html"><img src="../assets/icons/home.svg" alt="Principal" /></a>
             </li>
             <li>
-              <a title="Política" href="./politic.html"><img src="../assets/icons/politics.svg" /></a>
+              <a title="Política" href="./politic.html"><img src="../assets/icons/politics.svg" alt="Política" /></a>
             </li>
             <li>
-              <a title="Educação" href="./education.html"><img src="../assets/icons/education.svg" /></a>
+              <a title="Educação" href="./education.html"><img src="../assets/icons/education.svg" alt="Educação" /></a>
             </li>
             <li>
-              <a title="Saúde" href="./health.html"><img src="../assets/icons/health.svg" /></a>
+              <a title="Saúde" href="./health.html"><img src="../assets/icons/health.svg" alt="Saúde" /></a>
             </li>
             <li>
-              <a title="Contato" href="./contact.html"><img src="../assets/icons/contact.svg" /></a>
+              <a title="Contato" href="./contact.html"><img src="../assets/icons/contact.svg" alt="Contato" /></a>
             </li>
           </ul>
         </nav>
@@ -63,7 +63,7 @@
             </div>
             <div class="default-input-container">
               <label class="default-input-label" for="category-input">Categoria:</label>
-              <select class="default-input" type="text" id="category-input">
+              <select class="default-input" id="category-input">
                 <option value="">Selecione uma categoria</option>
                 <option value="health">Saúde</option>
                 <option value="education">Educação</option>
@@ -76,7 +76,7 @@
             </div>
             <div class="default-input-container">
               <label class="default-input-label" for="text-input">Texto:</label>
-              <textarea class="default-input" type="text" id="text-input"></textarea>
+              <textarea class="default-input" id="text-input"></textarea>
             </div>
             <div class="default-action-buttons-container">
               <input type="button" value="Criar Notícia" class="default-button default-button-success-theme" onclick="createNews()" />
